--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Веб сайт для поиска фильмов"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.swg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Movies Frontend</title>
+    <title>Movies</title>
   </head>
   <body>
     <div id="root"></div>
